# async-rust-rat

./: .gitignore  Cargo.toml  IMAGES.md  LICENSE  README.md  USERMANUAL.md  example_tokio_tcp.rs  package-lock.json  prepare_prod_build.bat
.cargo/: config.toml
client/: Cargo.toml
client/src/: globals.rs  handler.rs  lib.rs  main.rs  new_handler.rs
client/src/features/: av_detection.rs  encryption.rs  file_manager.rs  hvnc.rs  mod.rs  other.rs  process.rs  remote_desktop.rs  reverse_proxy.rs  reverse_shell.rs  system_commands.rs  tray_icon.rs  troll.rs  webcam.rs
client/src/features/collectors/: bios.rs  cpu.rs  displays.rs  drives.rs  gpu.rs  mod.rs  ram.rs  security.rs  system.rs  unique.rs
client/src/features/fun/: audio_fun.rs  desktop_fun.rs  mod.rs
client/src/features/messaging/: chatbox.rs  inputbox.rs  messagebox.rs  mod.rs
client/src/platform/: TODO-linux.md  linux.rs  mod.rs
client/src/plugin_manager/: plugin.rs
client/src/service/: anti_vm.rs  config.rs  install.rs  mod.rs  mutex.rs  plugin.rs  tray_icon.rs
common/: Cargo.toml
common/src/: buffers.rs  client_info.rs  commands.rs  connection.rs  convert.rs  lib.rs  packets.rs  shell.rs  socks.rs  sysinfo.rs
common/src/async_impl/: connection.rs  packets.rs
plugins/file_manager/: Cargo.toml
plugins/file_manager/src/: file_manager.rs  lib.rs
python_utils_testing/: generate_random_clients.py  test_clients.json
python_utils_testing/clients/: generate_random_clients.py  test_clients.json
python_utils_testing/world/: codes.json  update_world_map_country_code.py  world_updated.json
server/: index.html  package-lock.json  package.json  tailwind.config.js  types.d.ts  vite.config.ts
server/src/: App.tsx  Layout.tsx  styles.css  types.ts
server/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
server/src-tauri/capabilities/: migrated.json
server/src-tauri/src/: client.rs  commands.rs  main.rs  new_client.rs  new_server.rs  server.rs
server/src-tauri/src/handlers/: mod.rs  tauri.rs
server/src-tauri/src/utils/: client_builder.rs  encryption.rs  logger.rs  mod.rs  resources.rs  reverse_proxy.rs  webcam.rs
server/src/components/: AVList.tsx  ContextMenu.tsx  Shell.tsx  TableFilter.tsx  WindowWrapper.tsx
server/src/components/home/: ClientInfo.tsx  ClientsTable.tsx  Svgs.tsx
server/src/components/home/modals/: MessageBoxModal.tsx  VisitWebsiteModal.tsx
server/src/components/world/: world.json  world.tsx
server/src/pages/: AVDetection.tsx  Chat.tsx  ClientInfo.tsx  ClientList.tsx  ClientView.tsx  Clients.tsx  FileManager.tsx  Fun.tsx  HVNC.tsx  Home.tsx  InputBox.tsx  Logs.tsx  ProcessViewer.tsx  RemoteDesktop.tsx  RemoteDesktopWindow.tsx  ReverseProxy.tsx  ReverseShell.tsx  Settings.tsx  Troll.tsx  WorldMap.tsx
server/src/rat/: RATCommands.tsx  RATProvider.tsx
server/src/utils/: commands.tsx  keybindings.tsx  preload_flags.tsx
server/src_bkp/: App.tsx
server/src_bkp/components/: ContextMenu.tsx
server/src_bkp/pages/: ClientList.tsx  ClientView.tsx
