[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
rmp-serde = "1.2.0"
chacha20poly1305 = "0.9.0"
rand_chacha = "0.9.0"
tokio = { version = "1.20.1", features = ["rt", "net", "macros", "time", "io-util", "sync"] }
bytes = "1.1"
rand = "0.9.1"
socket2 = "0.5"