[package]
name = "server"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"]  }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.20.1", features = ["rt", "full"] }
base64 = "0.22.0"
common = { path = "../../common" }
rsa = "0.9.6"
rand = "0.9.1"
rand_chacha = "0.9.0"
anyhow = "1.0"
rmp-serde = "1.2.0"
object = "0.35.0"
winapi = { version = "0.3.9", features = [ "winuser" ] }
once_cell = "1.19.0"
socket2 = "0.5"
uuid = "1.16.0"
image = "0.24.5"
maxminddb = "0.26.0"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
lz4_flex = "0.3.0"

[features]
custom-protocol = ["tauri/custom-protocol"]